--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
            <div class ='container'>
          <h1>IOT Based Green House Monitoring System</h1>
          <h3> Mode selection</h3>
-<a href=\"dev1=1\" button type="button" class="btn btn-success">Automatic</button></a>
+<a href=\"dev1=1\" button type="button" class="btn btn-success">Automatic</button></a> <form=\"dev1=1\"> <input type="button" value="back" onclick="history.go(-1)"> </form>
   <a href=\"dev1=0\" button type="button" class="btn btn-primary">Manual</button></a>
            <h3></h3>
            </li>
